force-app/main/default/objects/Building__c/fields/Additional_Floors__c.field-meta.xml
<CustomField>
    <fullName>Additional_Floors__c</fullName>
    <label>Additional Floors</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Penthouse</fullName>
            </value>
            <value>
                <fullName>13th</fullName>
            </value>
            <value>
                <fullName>Lower Level</fullName>
            </value>
            <value>
                <fullName>Basement</fullName>
            </value>
            <value>
                <fullName>Lobby and 1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>