force-app/main/default/objects/Building__c/fields/Additional_Market__c.field-meta.xml
<CustomField>
    <fullName>Additional_Market__c</fullName>
    <label>Additional Market</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Arts District</fullName>
            </value>
            <value>
                <fullName>Century City</fullName>
            </value>
            <value>
                <fullName>Downtown Los Angeles</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Rosecrans Corridor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>