force-app/main/default/objects/Building__c/fields/Asking_Rate__c.field-meta.xml
<CustomField>
    <fullName>Asking_Rate__c</fullName>
    <label>Asking Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>