force-app/main/default/objects/Building__c/fields/Brokers_Added__c.field-meta.xml
<CustomField>
    <fullName>Brokers_Added__c</fullName>
    <label>Brokers Added</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Incomplete</fullName>
                <default>true</default>
                <label>Incomplete</label>
            </value>
            <value>
                <fullName>No Listing Brokers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>