force-app/main/default/objects/Building__c/fields/Building_Type__c.field-meta.xml
<CustomField>
    <fullName>Building_Type__c</fullName>
    <label>Building Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single-Tenant</fullName>
            </value>
            <value>
                <fullName>Multi-Tenant</fullName>
            </value>
            <value>
                <fullName>Owner-User</fullName>
            </value>
            <value>
                <fullName>Owner-User with Tenants</fullName>
            </value>
            <value>
                <fullName>Future Building</fullName>
            </value>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>