force-app/main/default/objects/Building__c/fields/building_website__c.field-meta.xml
<CustomField>
    <fullName>building_website__c</fullName>
    <inlineHelpText>If no website, write &quot;None&quot;</inlineHelpText>
    <label>Building Website</label>
    <type>Url</type>
</CustomField>