force-app/main/default/objects/Building__c/fields/City_Lookup__c.field-meta.xml
<CustomField>
    <fullName>City_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>City</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>City__c.Submarket__c</field>
            <operation>equals</operation>
            <valueField>$Source.Submarket_Lookup__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>City__c</referenceTo>
    <relationshipLabel>City Buildings</relationshipLabel>
    <relationshipName>Buildings</relationshipName>
    <type>Lookup</type>
</CustomField>