force-app/main/default/objects/Building__c/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <inlineHelpText>Use your judgement</inlineHelpText>
    <label>Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>A-/B+</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>B-/C+</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>