force-app/main/default/objects/Building__c/fields/Costar_Address__c.field-meta.xml
<CustomField>
    <fullName>Costar_Address__c</fullName>
    <label>Costar Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>