force-app/main/default/objects/Building__c/fields/Costar_Link__c.field-meta.xml
<CustomField>
    <fullName>Costar_Link__c</fullName>
    <label>Costar Link</label>
    <type>Url</type>
</CustomField>