force-app/main/default/objects/Building__c/fields/Direct_Flyer_Added__c.field-meta.xml
<CustomField>
    <fullName>Direct_Flyer_Added__c</fullName>
    <label>Direct Flyer Added</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Incomplete</fullName>
                <default>true</default>
                <label>Incomplete</label>
            </value>
            <value>
                <fullName>No Direct Flyer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>