force-app/main/default/objects/Building__c/fields/Full_Address__c.field-meta.xml
<CustomField>
    <fullName>Full_Address__c</fullName>
    <formula>LOWER( Name)   &amp;  LOWER(City__c )&amp;  LOWER(text(StatePK__c))</formula>
    <inlineHelpText>This field will be automatically created based on the Address, City and State fields that are input above.</inlineHelpText>
    <label>Full Address</label>
    <type>Text</type>
</CustomField>