force-app/main/default/objects/Building__c/fields/Landlord__c.field-meta.xml
<CustomField>
    <fullName>Landlord__c</fullName>
    <label>Landlord</label>
    <type>TextArea</type>
</CustomField>