force-app/main/default/objects/Building__c/fields/Longitude__c.field-meta.xml
<CustomField>
    <fullName>Longitude__c</fullName>
    <label>Longitude</label>
    <precision>18</precision>
    <scale>14</scale>
    <type>Number</type>
</CustomField>