force-app/main/default/objects/Building__c/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <label>Market (not used)</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StatePK__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Los Angeles</fullName>
            </value>
            <value>
                <fullName>Orange County</fullName>
            </value>
            <value>
                <fullName>San Francisco</fullName>
            </value>
            <value>
                <fullName>San Jose</fullName>
            </value>
            <value>
                <fullName>San Diego</fullName>
            </value>
            <value>
                <fullName>Ventura County</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>