force-app/main/default/objects/Building__c/fields/Market_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Market_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Market</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Continent__c</field>
            <operation>equals</operation>
            <valueField>Market__c.Continent__c</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.Country__c</field>
            <operation>equals</operation>
            <valueField>Market__c.Country__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Market__c</referenceTo>
    <relationshipLabel>Market Buildings</relationshipLabel>
    <relationshipName>Buildings</relationshipName>
    <type>Lookup</type>
</CustomField>