force-app/main/default/objects/Building__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>This is the name of the building, such as US Bank Tower.</description>
    <inlineHelpText>If Building is named within a campus, format &quot;&lt;Campus Name&gt;, &lt;Building Name&gt;&quot;</inlineHelpText>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>