force-app/main/default/objects/Building__c/fields/Notes_and_Articles__c.field-meta.xml
<CustomField>
    <fullName>Notes_and_Articles__c</fullName>
    <label>Notes and Articles</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>