force-app/main/default/objects/Building__c/fields/Parking_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Parking_Ratio__c</fullName>
    <inlineHelpText>Format should be &quot;X.X : 1,000 RSF&quot;</inlineHelpText>
    <label>Parking Ratio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>