force-app/main/default/objects/Building__c/fields/Parking_Type_s__c.field-meta.xml
<CustomField>
    <fullName>Parking_Type_s__c</fullName>
    <label>Parking Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Covered</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Reserved</fullName>
            </value>
            <value>
                <fullName>Structure</fullName>
            </value>
            <value>
                <fullName>Surface</fullName>
            </value>
            <value>
                <fullName>Tandem</fullName>
            </value>
            <value>
                <fullName>Unreserved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>