force-app/main/default/objects/Building__c/fields/Primary_Broker__c.field-meta.xml
<CustomField>
    <fullName>Primary_Broker__c</fullName>
    <label>Brokers</label>
    <type>TextArea</type>
</CustomField>