force-app/main/default/objects/Building__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State - do not use</label>
    <type>TextArea</type>
</CustomField>