force-app/main/default/objects/Building__c/fields/StatePK__c.field-meta.xml
<CustomField>
    <fullName>StatePK__c</fullName>
    <description>State Picklist</description>
    <label>State/Territory</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Country__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AB</fullName>
            </value>
            <value>
                <fullName>AG</fullName>
            </value>
            <value>
                <fullName>AK</fullName>
            </value>
            <value>
                <fullName>AL</fullName>
            </value>
            <value>
                <fullName>AR</fullName>
            </value>
            <value>
                <fullName>AreaC1</fullName>
            </value>
            <value>
                <fullName>AreaC2</fullName>
            </value>
            <value>
                <fullName>AreaC3</fullName>
            </value>
            <value>
                <fullName>AreaM1</fullName>
            </value>
            <value>
                <fullName>AreaM2</fullName>
            </value>
            <value>
                <fullName>AreaM3</fullName>
            </value>
            <value>
                <fullName>AreaUK1</fullName>
            </value>
            <value>
                <fullName>AreaUK2</fullName>
            </value>
            <value>
                <fullName>AreaUK3</fullName>
            </value>
            <value>
                <fullName>AZ</fullName>
            </value>
            <value>
                <fullName>BC</fullName>
            </value>
            <value>
                <fullName>BN</fullName>
            </value>
            <value>
                <fullName>BS</fullName>
            </value>
            <value>
                <fullName>CA</fullName>
            </value>
            <value>
                <fullName>CH</fullName>
            </value>
            <value>
                <fullName>CI</fullName>
            </value>
            <value>
                <fullName>CL</fullName>
            </value>
            <value>
                <fullName>CO</fullName>
            </value>
            <value>
                <fullName>CP</fullName>
            </value>
            <value>
                <fullName>CS</fullName>
            </value>
            <value>
                <fullName>CT</fullName>
            </value>
            <value>
                <fullName>DC</fullName>
            </value>
            <value>
                <fullName>DE</fullName>
            </value>
            <value>
                <fullName>DF</fullName>
            </value>
            <value>
                <fullName>DG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>