force-app/main/default/objects/Building__c/fields/Submarket__c.field-meta.xml
<CustomField>
    <fullName>Submarket__c</fullName>
    <label>Submarket (not used)</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Market__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Burbank/Glendale/Pasadena</fullName>
            </value>
            <value>
                <fullName>Downtown Los Angeles</fullName>
            </value>
            <value>
                <fullName>Mid-Cities</fullName>
            </value>
            <value>
                <fullName>Mid-Wilshire</fullName>
            </value>
            <value>
                <fullName>San Fernando Valley</fullName>
            </value>
            <value>
                <fullName>San Gabriel Valley</fullName>
            </value>
            <value>
                <fullName>Santa Clarita Valley</fullName>
            </value>
            <value>
                <fullName>South Bay</fullName>
            </value>
            <value>
                <fullName>Southeast Los Angeles</fullName>
            </value>
            <value>
                <fullName>West Los Angeles</fullName>
            </value>
            <value>
                <fullName>Airport Area</fullName>
            </value>
            <value>
                <fullName>Central County</fullName>
            </value>
            <value>
                <fullName>North County</fullName>
            </value>
            <value>
                <fullName>South County</fullName>
            </value>
            <value>
                <fullName>West County</fullName>
            </value>
            <value>
                <fullName>SF 1</fullName>
            </value>
            <value>
                <fullName>SF 2</fullName>
            </value>
            <value>
                <fullName>SF 3</fullName>
            </value>
            <value>
                <fullName>SJ 1</fullName>
            </value>
            <value>
                <fullName>SJ 2</fullName>
            </value>
            <value>
                <fullName>SJ 3</fullName>
            </value>
            <value>
                <fullName>SD 1</fullName>
            </value>
            <value>
                <fullName>SD 2</fullName>
            </value>
            <value>
                <fullName>SD 3</fullName>
            </value>
            <value>
                <fullName>VC 1</fullName>
            </value>
            <value>
                <fullName>VC 2</fullName>
            </value>
            <value>
                <fullName>VC 3</fullName>
            </value>
            <value>
                <fullName>Hollywood/Wilshire Corridor</fullName>
            </value>
            <value>
                <fullName>Tri-Cities</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>