force-app/main/default/objects/Building__c/fields/Submarket_City__c.field-meta.xml
<CustomField>
    <fullName>Submarket_City__c</fullName>
    <label>Submarket City</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>El Segundo</fullName>
            </value>
            <value>
                <fullName>Glendale</fullName>
            </value>
            <value>
                <fullName>Hawthorne</fullName>
            </value>
            <value>
                <fullName>Hermosa Beach</fullName>
            </value>
            <value>
                <fullName>Manhattan Beach</fullName>
            </value>
            <value>
                <fullName>Marina</fullName>
            </value>
            <value>
                <fullName>Playa Vista</fullName>
            </value>
            <value>
                <fullName>Torrance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>