force-app/main/default/objects/Building__c/fields/Submarket_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Submarket_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Submarket</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Submarket__c.Market__c</field>
            <operation>equals</operation>
            <valueField>$Source.Market_Lookup__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Submarket__c</referenceTo>
    <relationshipLabel>Submarket Buildings</relationshipLabel>
    <relationshipName>Buildings</relationshipName>
    <type>Lookup</type>
</CustomField>