force-app/main/default/objects/Building__c/fields/Year_Renovated__c.field-meta.xml
<CustomField>
    <fullName>Year_Renovated__c</fullName>
    <inlineHelpText>If no renovation, write &quot;N/A&quot;</inlineHelpText>
    <label>Year Renovated</label>
    <length>4</length>
    <type>Text</type>
</CustomField>