force-app/main/default/objects/Building__c/fields/ZIP__c.field-meta.xml
<CustomField>
    <fullName>ZIP__c</fullName>
    <label>ZIP</label>
    <type>TextArea</type>
</CustomField>