force-app/main/default/objects/Building__c/validationRules/Brokers_Added_null_check.validationRule-meta.xml
<ValidationRule>
    <fullName>Brokers_Added_null_check</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Brokers_Added__c , &apos;&apos;)</errorConditionFormula>
    <errorDisplayField>Brokers_Added__c</errorDisplayField>
    <errorMessage>Select a value</errorMessage>
</ValidationRule>