force-app/main/default/objects/Building__c/validationRules/Direct_Flyer_null_check.validationRule-meta.xml
<ValidationRule>
    <fullName>Direct_Flyer_null_check</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Direct_Flyer_Added__c , &apos;&apos;)</errorConditionFormula>
    <errorDisplayField>Direct_Flyer_Added__c</errorDisplayField>
    <errorMessage>Select a value</errorMessage>
</ValidationRule>