force-app/main/default/objects/Building__c/validationRules/Must_select_a_value.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_select_a_value</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Vacancies_Added__c, &apos;&apos;)</errorConditionFormula>
    <errorDisplayField>Vacancies_Added__c</errorDisplayField>
    <errorMessage>Select a value</errorMessage>
</ValidationRule>