force-app/main/default/objects/Building__c/validationRules/Sales_Added_null_check.validationRule-meta.xml
<ValidationRule>
    <fullName>Sales_Added_null_check</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Sales_Added__c , &apos;&apos;)</errorConditionFormula>
    <errorDisplayField>Sales_Added__c</errorDisplayField>
    <errorMessage>Select a value</errorMessage>
</ValidationRule>