force-app/main/default/objects/Building__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>City__c</columns>
    <columns>StatePK__c</columns>
    <columns>Landlord__c</columns>
    <columns>RSF__c</columns>
    <columns>Class__c</columns>
    <columns>Parking_Ratio__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>