force-app/main/default/objects/Building__c/listViews/LAX.listView-meta.xml
<ListView>
    <fullName>LAX</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Class__c</columns>
    <columns>Floors__c</columns>
    <columns>RSF__c</columns>
    <columns>Landlord__c</columns>
    <columns>Parking_Ratio__c</columns>
    <filterScope>Everything</filterScope>
    <label>LAX</label>
</ListView>