force-app/main/default/objects/Building__c/listViews/Los_Angeles.listView-meta.xml
<ListView>
    <fullName>Los_Angeles</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Class__c</columns>
    <columns>Floors__c</columns>
    <columns>RSF__c</columns>
    <columns>Landlord__c</columns>
    <columns>Parking_Ratio__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>City__c</field>
        <operation>equals</operation>
        <value>Los Angeles</value>
    </filters>
    <label>Los Angeles</label>
</ListView>